logging/graylog/graylog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: graylog
  template:
    metadata:
      labels:
        name: graylog
      annotations:
        "prometheus.io/scrape": "true"
        "prometheus.io/path": "/api/plugins/org.graylog.plugins.metrics.prometheus/metrics"
        "prometheus.io/port": "9000"
    spec:
      containers:

        # mongo
      - name: mongo
        image: mongo:3
        resources:
          requests:
            cpu: "150m"
            memory: "400Mi"
          limits:
            cpu: "2"
            memory: "800Mi"

        # graylog
      - name: graylog
        image: observabilitystack/graylog:3.3.7
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /system/lbstatus
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 60
          failureThreshold: 20
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /system/lbstatus
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 60
          failureThreshold: 20
          periodSeconds: 3
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "3Gi"
        ports:
        - containerPort: 9000
        - containerPort: 12201
