logging/graylog/graylog-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graylog
spec:
  rules:
  - host: logs.${HOSTNAME}.${DOMAIN_NAME}
    http:
      paths:
      - backend:
          serviceName: graylog
          servicePort: web
